tests/machine/x/c/query_sum_select.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/query_sum_select.c:17:3: error: conflicting types for ‘list_int’; have ‘struct <anonymous>’
   17 | } list_int;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/query_sum_select.c:7:3: note: previous declaration of ‘list_int’ with type ‘list_int’
    7 | } list_int;
      |   ^~~~~~~~
/workspace/mochi/tests/machine/x/c/query_sum_select.c:18:17: error: conflicting types for ‘list_int_create’; have ‘list_int(int)’
   18 | static list_int list_int_create(int len) {
      |                 ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/query_sum_select.c:8:17: note: previous definition of ‘list_int_create’ with type ‘list_int(int)’
    8 | static list_int list_int_create(int len) {
      |                 ^~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/query_sum_select.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/query_sum_select.c:43:30: error: incompatible type for argument 1 of ‘_sum_int’
   43 |     _t2.data[_t3] = _sum_int(n);
      |                              ^
      |                              |
      |                              int
/workspace/mochi/tests/machine/x/c/query_sum_select.c:24:30: note: expected ‘list_int’ but argument is of type ‘int’
   24 | static int _sum_int(list_int v) {
      |                     ~~~~~~~~~^
/workspace/mochi/tests/machine/x/c/query_sum_select.c:47:19: error: incompatible types when initializing type ‘double’ using type ‘list_int’
   47 |   double result = _t2;
      |                   ^~~

   1: #include <stdio.h>
